@@ -1,3 +1,4 @@
+Added system response for structure change, see #3136
 # 1.01.05 (58221) Nov 1, 2011
 # 1.01.04 (58186) Oct 31, 2011
 10/31/11 Updated message formatting, see #3136
